...

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your notification title.."
            android:textColor="@color/white"
            android:id="@+id/title"
            style="@style/App_EditTextStyle"
            android:textColorHint="@color/rafnav1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:textColor="@color/white"
            android:inputType="textMultiLine"
            android:lines="5"
            android:background="@drawable/rounded_edge_bottom_un"
            android:maxLines="7"
            android:maxLength="240"
            android:id="@+id/message"
            style="@style/App_EditTextStyle"
            android:textColorHint="@color/rafnav1"
            />

            <LinearLayout
                android:layout_width="match_parent"
...
